i added my logo ,no logo

--- a/index.css
+++ b/index.css
@@ -1,11 +1,10 @@
-table{background-color: rgb(58, 23, 93);border: 1px solid black; width: 250px; height: 500px}
-body{background-color: aquamarine;}
-tbody > tr:first-child{background-color:greenyellow}
-tr:nth-child(2){background-color: brown;}
-th{border-color: white;border-width: 2px; border-style: solid;}
-thead > tr >th{color: white;}
-input{background-color:aquamarine ;margin-left: 10px;}
-input{border-top:none; border-left: none; border-right:none;}
-select{border-top:none; border-left: none; border-right:none;}
-select{background-color:aquamarine ;}
-
+#hero-section{background-color: aqua;}
+.file{background-color: palevioletred; display:inline-block;width:200px;height:100px;padding:20px; }
+#no-charges{width:400px;}
+#herotext-section{ margin-left:auto; margin-right:auto;width:500px;}
+#file-section{margin-left:auto; margin-right:auto;width:1000px;color: whitesmoke;}
+nav{;background-color: ; display: inline-block;}
+header{display: flex; justify-content:space-around; align-items: center;}
+a{padding:10px;}
+div{background-color;color: aqua;display: inline-block;}
+li{width:200px;}
